# SoftHSMv1

./: .travis.sh  .travis.yml  AUTHORS  LICENSE  Makefile.am  NEWS  README  README.MinGW  README.md  README.repo  configure.ac  prepdist.sh  softhsm.conf.5  softhsm.conf.5.in  softhsm.conf.in
checks/: Makefile.am  README  checks.c  checks.h  cryptoki.h  keyconv.sh  softhsm.conf
m4/: acx_64bit.m4  acx_botan.m4  acx_libsqlite3.m4  acx_strict.m4
src/lib/: Makefile.am  MutexFactory.cpp  MutexFactory.h  SoftDatabase.cpp  SoftDatabase.h  SoftFind.cpp  SoftFind.h  SoftHSMInternal.cpp  SoftHSMInternal.h  SoftKeyStore.cpp  SoftKeyStore.h  SoftSession.cpp  SoftSession.h  SoftSlot.cpp  SoftSlot.h  attribute.cpp  attribute.h  botan_compat.cpp  botan_compat.h  cryptoki.h  file.cpp  file.h  log.cpp  log.h  main.cpp  main.h  mechanisms.cpp  mechanisms.h  mutex.h  osmutex.cpp  osmutex.h  tokenhandling.cpp  tokenhandling.h  userhandling.cpp  userhandling.h  util.h
src/lib/cryptoki_compat/: pkcs11.h
testing/: build-softhsm.sh  test-softhsm.sh
